# tweetnlp

./: .flake8  README.md  pyproject.toml  setup.cfg
test/: test_eval.py  test_resources.py
tweetnlp/: __init__.py  classify.py  cli.py  data.py  embed.py  eval.py  utils.py
tweetnlp/resources/: __init__.py
tweetnlp/resources/datasets/emoji/: mapping.txt  train_text.txt
tweetnlp/resources/datasets/emotion/: test_text.txt  train_text.txt  val_text.txt
tweetnlp/resources/datasets/hate/: mapping.txt  test_text.txt  train_text.txt  val_text.txt
tweetnlp/resources/datasets/irony/: test_text.txt  train_text.txt  val_text.txt
tweetnlp/resources/datasets/offensive/: test_text.txt  train_text.txt  val_text.txt
tweetnlp/resources/datasets/sentiment/: test_text.txt  val_text.txt
tweetnlp/resources/datasets/stance/: mapping.txt
tweetnlp/resources/datasets/stance/abortion/: test_text.txt  train_text.txt  val_text.txt
tweetnlp/resources/datasets/stance/atheism/: test_text.txt  train_text.txt  val_text.txt
tweetnlp/resources/datasets/stance/climate/: test_text.txt  train_text.txt  val_text.txt
tweetnlp/resources/datasets/stance/feminist/: test_text.txt  train_text.txt  val_text.txt
tweetnlp/resources/datasets/stance/hillary/: test_text.txt  train_text.txt  val_text.txt
