[metadata]
name = tweetnlp
version = 0.0.1
description = TBA
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/cardiffnlp/tweetnlp
author = CardiffNLP
# author_email =
keywords =
    tweet
    nlp
    language-model
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
project_urls =
    Website = https://tweetnlp.org
    Source = https://github.com/cardiffnlp/tweetnlp

[options]
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.7
install_requires =
    importlib_resources>1.3; python_version < "3.9"
    scikit-learn
    torch
    tqdm
    transformers
    typer

[aliases]
test=pytest

[options.entry_points]
console_scripts =
    tweetnlp = tweetnlp.cli:CLI

[options.extras_require]
test =
    pytest
    pytest-cov
docs =
    sphinx
dev =
    black
    flake8
    ipywidgets
    jupyter_contrib_nbextensions
    jupyter_nbextensions_configurator
    notebook
    pre-commit
    tweetnlp[test]
    tweetnlp[docs]
